Enhance README with project details and instructions
Expanded README with detailed project features, architecture, and setup instructions.